namespaces/live-1.cloud-platform.service.justice.gov.uk/keyworker-api-preprod/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: keyworker-api-preprod
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "preprod"
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "HMPPS"
    cloud-platform.justice.gov.uk/application: "keyworker-api"
    cloud-platform.justice.gov.uk/owner: "Digital Prison Services: dps-hmpps@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/keyworker-api.git"
